# agentshare

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/agentshare/: __init__.py  cli.py  config.py
src/agentshare/context/: models.py  store.py
src/agentshare/mcp/: installer.py  server.py
src/agentshare/skills/: builtin.py  registry.py  scaffold.py
tests/: test_context.py  test_installer.py  test_mcp.py  test_skills.py
